feat: :fire: documentation API and Swagger
